# demos-lang-rust

./: .aspell.en.prepl  .aspell.en.pws  .auto.enter.sh  .auto.exit.sh  .gitignore  Cargo.toml  Makefile  README.md  build.sh  clean.sh  code.sh  emphasis.txt  packages.txt  phonebook.txt  requirements.txt  run.sh
c_interface/: Makefile  clib.c  main.rs
config/: deps.py  project.py
crates/: Cargo.toml
crates/affinity/: Cargo.toml
crates/do_fork/: Cargo.toml
crates/do_fork/src/: main.rs
crates/hello/: Cargo.toml
docs/: links.txt
errors/: cant_use.rs
errors/lifetimes/: global_lifetime.rs  struct.rs  struct_same_lifetime.rs  wrong.rs
errors/not_checking_errors/: main.rs
errors/printing/: wrong.rs
examples/anyhow/context/: Cargo.toml
examples/array/array_simple/: Cargo.toml
examples/array/error_in_access/: Cargo.toml
examples/atomics/atomic_task_queue/: Cargo.toml
examples/atomics/prove_atomics/: Cargo.toml
examples/channels/channels_types/: Cargo.toml
examples/channels/channels_usage/: Cargo.toml
examples/closure/no_function/: Cargo.toml
examples/closure/size_of_closure/: Cargo.toml
examples/closure/with_boxing/: Cargo.toml
examples/closure/with_function/: Cargo.toml
examples/closure/wrapping_code/: Cargo.toml
examples/comments/: Cargo.toml
examples/error_handling/errors_expect/: Cargo.toml
examples/error_handling/errors_panic/: Cargo.toml
examples/error_handling/errors_print/: Cargo.toml
examples/error_handling/errors_result/: Cargo.toml
examples/error_handling/errors_return_code/: Cargo.toml
examples/error_handling/errors_return_possible_error/: Cargo.toml
examples/error_handling/errors_wrap/: Cargo.toml
examples/exit_code/: returning_code.rs
examples/exit_code/exit_code_on_expect/: Cargo.toml
examples/exit_code/exit_code_on_panic/: Cargo.toml
examples/exit_code/exit_code_on_unwrap/: Cargo.toml
examples/exit_code/exit_code_return/: Cargo.toml
examples/ffi_to_c/: Cargo.toml
examples/functions/functions_basic/: Cargo.toml
examples/functions/functions_name_of_current_function/: Cargo.toml
examples/functions/functions_no_return_type/: Cargo.toml
examples/functions/functions_pass_non_mutable/: Cargo.toml
examples/goodbye/: Cargo.toml
examples/hashmap/map_simple/: Cargo.toml
examples/hashmap/map_unify/: Cargo.toml
examples/hello_world/: Cargo.toml
examples/io/: input_from_user.rs  write_file_basic.rs
examples/io/io_input_from_user/: Cargo.toml
examples/io/io_read_file_line_by_line/: Cargo.toml
examples/io/io_read_whole_file/: Cargo.toml
examples/io/io_write_file_basic/: Cargo.toml
examples/iterators/iter_direct/: Cargo.toml
examples/iterators/iter_for_loop/: Cargo.toml
examples/lifetimes/: lifetimes_differennt.rs  lifetimes_string_slices.rs
examples/lifetimes/lifetimes_array_slices/: Cargo.toml
examples/lifetimes/lifetimes_differennt/: Cargo.toml
examples/lifetimes/lifetimes_string_slices/: Cargo.toml
examples/loops/: loops_simple.rs
examples/loops/loops_set_type/: Cargo.toml
examples/loops/loops_simple/: Cargo.toml
examples/loops/loops_with_step/: Cargo.toml
examples/low_level/affinity/: Cargo.toml
examples/low_level/do_fork/: Cargo.toml
examples/low_level/ffi_to_c/: Cargo.toml  README.md
examples/low_level/inline/: Cargo.toml
examples/low_level/number_of_cores/: Cargo.toml
examples/macros/macro_basic/: Cargo.toml
examples/ownership/: borrow_without_function.rs  two_owners_in_func.rs
examples/performance/: Cargo.toml
examples/printing/: print_numbers.rs
examples/turning_off_warnings/: Cargo.toml
examples/types/: overflow.rs
examples/unicode/: Cargo.toml  simple.rs
exercises/book_catalog/: Cargo.toml  exercise.md  explanation.md
exercises/calculator/: exercise.md
exercises/create_iterator_via_closure/: Cargo.toml
exercises/fibonacci/: exercise.md
exercises/grade_calculator/: exercise.md
exercises/guessing_game/: exercise.md
exercises/iterator_oo/: Cargo.toml  exercise.md
exercises/iterator_two_iterators/: Cargo.toml  exercise.md
exercises/library_management/: Cargo.toml  exercise.md
exercises/nth_word/: Cargo.toml  exercise.md
exercises/phonebook/: Cargo.toml  exercise.md  phonebook.txt
exercises/priority_queue/: exercise.md
exercises/producers_consumers/: Cargo.toml  exercise.md
exercises/temperature_converter/: Cargo.toml  exerise.md
exercises/two_threads_passing_info/: Cargo.toml
exercises/users_with_shell/: Cargo.toml  passwd
ffi_to_c/: Cargo.toml
goodbye/: Cargo.toml
hello/: Cargo.toml
inline-c/: Cargo.toml
inline-c/src/: main.rs
number_of_cores/: Cargo.toml
number_of_cores/src/: main.rs
scripts/: publish.sh
snipplets/: main.md.mako
src/: README.md
src/atomics/: test.rs
src/channels/: types.rs
src/closure/: no_function.rs  with_boxing.rs  with_function.rs  wrapping_code.rs
src/comments/: comments.rs
src/core/: input_from_user.rs  unused_variable_directive.rs  unused_variable_underscore.rs
src/error_handling/: print.rs  return_code.rs  return_possible_error.rs  wrap.rs
src/exit_code/: exit_code_on_expect.rs  exit_code_on_unwrap.rs
src/functional/: map.rs
src/functions/: name_of_current_function.rs  pass_non_mutable.rs  simple.rs
src/hashmap/: basic.rs
src/hello_world/: hello_world.rs
src/io/: input_from_user.rs  read_file_line_by_line.rs  read_whole_file.rs  write_file_basic.rs
src/iterators/: using_directly.rs  using_with_for.rs
src/loops/: set_type.rs
src/multi_threading/: pass_parameters.rs  simple.rs
src/mutability/: cant_change_var.rs  inference.rs
src/performance/: bench.rs.moved  timeit.rs
src/printing/: flush.rs
src/refs/: ref_to_ref.rs
src/strings/: string_types.rs  string_vs_string_slice.rs
src/structs/: basic.rs  copy_fields_from_another_struct.rs  printing.rs
src/tuples/: tup.rs
src/types/: i32_is_default.rs  overflow.rs  printing_types.rs  simple.rs
src/vectors/: print.rs
standalone/c_interface/: Makefile  main.rs
to_integrate/: borrow_without_function.rs  calc_len.rs  change_variable.rs  map_reduce.rs  strings.rs
(+125 files in other folders)
