[workspace]

resolver = "2"

members = [
	"examples/unicode",
	"examples/channels",
	"examples/comments",
	"examples/drop",
	"examples/error_handling",
	"examples/exit_code",
	"examples/functions",
	"examples/io",
	"examples/iterators",
	"examples/lifetimes",
	"examples/loops",
	"examples/multi_threading",
	"examples/mutability",
	"examples/ownership",
	"examples/printing",
	"examples/tuples",
	"examples/turning_off_warnings",
	"examples/variables",

	"examples/strings/creating",
	"examples/strings/ops",
	"examples/strings/string_types",

	"examples/vectors/as_stack",
	"examples/vectors/from_iterator",
	"examples/vectors/print",

	"examples/closure/no_function",
	"examples/closure/size_of_closure",
	"examples/closure/with_boxing",
	"examples/closure/with_function",
	"examples/closure/wrapping_code",

	"exercises/create_iterator_via_closure",
	"exercises/phonebook",
	"exercises/two_threads_passing_info",
	"exercises/users_with_shell",
	"exercises/producers_consumers",

	"examples/basic/hello_world",
	"examples/basic/guess",

	"examples/types/i32_is_default",
	"examples/types/overflow",
	"examples/types/overflow_2",
	"examples/types/printing_types",
	"examples/types/types_simple",

	"examples/functional/map",

	"examples/structs/basic_struct",
	"examples/structs/copy_fields_from_another_struct",
	"examples/structs/printing_struct",

	"examples/performance/timeit",
	"examples/performance/bench",

	"examples/low_level/ffi_to_c",
	"examples/low_level/inline",
	"examples/low_level/number_of_cores",
	"examples/low_level/affinity",
	"examples/low_level/do_fork",

	"examples/atomics/prove_atomics",

	"examples/array/error_in_access",
	"examples/array/array_simple",

	"examples/refs/ref_to_ref",

	"examples/hashmap/map_simple",
]
# these are the crates you want to manipulate by default (unless otherwise specified)
# if you do not specify the "default-members" configuration option then it is all of the
# above mentioned under "members"
# default-members = [
#     "hello",
#     "goodbye",
#     "ffi_to_c",
#     "inline",
#     "number_of_cores",
# ]
# default-run = "hello"

[profile.dev]
# all the following options are to reduce binary sizes
# see https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip=true
debug=false
opt-level="s"
lto=true
codegen-units=1

# [package]
# name="toplevel"
# version="0.1.0"
# default-run="hello"
