[workspace]

resolver = "2"

members = [
	"exercises/create_iterator_via_closure",
	"exercises/phonebook",
	"exercises/two_threads_passing_info",
	"exercises/users_with_shell",
	"exercises/producers_consumers",

	"examples/strings/creating",
	"examples/strings/ops",
	"examples/strings/string_types",

	"examples/vectors/drop",
	"examples/vectors/as_stack",
	"examples/vectors/from_iterator",
	"examples/vectors/print",

	"examples/closure/no_function",
	"examples/closure/size_of_closure",
	"examples/closure/with_boxing",
	"examples/closure/with_function",
	"examples/closure/wrapping_code",

	"examples/basic/hello_world",
	"examples/basic/guess",

	"examples/types/i32_is_default",
	"examples/types/overflow",
	"examples/types/overflow_2",
	"examples/types/printing_types",
	"examples/types/types_simple",

	"examples/functional/map",
	"examples/functional/fold",

	"examples/structs/basic_struct",
	"examples/structs/copy_fields_from_another_struct",
	"examples/structs/printing_struct",

	"examples/performance/timeit",
	"examples/performance/bench",

	"examples/low_level/ffi_to_c",
	"examples/low_level/inline",
	"examples/low_level/number_of_cores",
	"examples/low_level/affinity",
	"examples/low_level/do_fork",

	"examples/atomics/prove_atomics",
	"examples/atomics/atomic_task_queue",

	"examples/array/error_in_access",
	"examples/array/array_simple",

	"examples/turning_off_warnings/unused_variables",
	"examples/turning_off_warnings/unused_variables_2",
	"examples/turning_off_warnings/unused_variables_3",
	"examples/turning_off_warnings/unused_variables_4",
	"examples/turning_off_warnings/disregard_errors",
	"examples/turning_off_warnings/disregard_errors_2",

	"examples/refs/ref_to_ref",
	"examples/refs/ref_basic",

	"examples/channels/channels_types",
	"examples/channels/channels_usage",

	"examples/multi_threading/threads_functional",
	"examples/multi_threading/threads_simple",
	"examples/multi_threading/threads_pass_parameters",
	"examples/multi_threading/threads_return_value",

	"examples/iterators/iter_direct",
	"examples/iterators/iter_for_loop",

	"examples/exit_code/exit_code_on_expect",
	"examples/exit_code/exit_code_on_panic",
	"examples/exit_code/exit_code_on_unwrap",
	"examples/exit_code/exit_code_return",

	"examples/variables/variables_unused_directive",
	"examples/variables/variables_unused_underscore",

	"examples/unicode/unicode_simple",
	"examples/unicode/unicode_normalize",

	"examples/hashmap/map_simple",
	"examples/hashmap/map_unify",

	"examples/syntax/syntax_comments",
	"examples/syntax/syntax_for",

	"examples/tuples/tuples_basic",
	"examples/tuples/tuples_features",
]

# these are the crates you want to manipulate by default (unless otherwise specified)
# if you do not specify the "default-members" configuration option then it is all of the
# above mentioned under "members"
# default-members = [
#     "hello",
#     "goodbye",
#     "ffi_to_c",
#     "inline",
#     "number_of_cores",
# ]
# default-run = "hello"

[profile.dev]
# all the following options are to reduce binary sizes
# see https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip=true
debug=false
opt-level="s"
lto=true
codegen-units=1

# [package]
# name="toplevel"
# version="0.1.0"
# default-run="hello"
