[workspace]

members = [
    "hello",
    "goodbye",
    "ffi_to_c",
    "inline",
    "number_of_cores",
    "affinity",
]
# these are the crates you want to manipulate by default (unless otherwise specified)
# if you do not specify the "default-members" configuration option then it is all of the
# above mentioned under "members"
# default-members = [
#     "hello",
#     "goodbye",
#     "ffi_to_c",
#     "inline",
#     "number_of_cores",
# ]

[profile.dev]
# all the following options are to reduce binary sizes
# see https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip=true
debug=false
opt-level="s"
lto=true
codegen-units=1

# [package]
# name="toplevel"
# version="0.1.0"
# default-run="hello"
